--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lsp-factory.js",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Helper Library to allow simple deployments of LSP3UniversalProfiles and LSP4DigitalCertificates",
   "main": "build/main/index.js",
   "typings": "build/main/index.d.ts",
@@ -15,8 +15,11 @@
     "fix": "run-s fix:*",
     "fix:prettier": "prettier \"src/**/*.ts\" --write",
     "fix:lint": "eslint src --ext .ts --fix",
-    "test": "run-s build test:*",
-    "test:unit": "nyc --silent ava",
+    "test": "run-s build test:unit",
+    "test:node": "hardhat node",
+    "test:unit": "run-p test:unit:*",
+    "test:unit:chain": "hardhat node",
+    "test:unit:ava": "wait-on http://127.0.0.1:8545/ && nyc ava",
     "check-cli": "run-s test diff-integration-tests check-integration-tests",
     "check-integration-tests": "run-s check-integration-test:*",
     "diff-integration-tests": "mkdir -p diff && rm -rf diff/test && cp -r test diff/test && rm -rf diff/test/test-*/.git && cd diff && git init --quiet && git add -A && git commit --quiet --no-verify --allow-empty -m 'WIP' && echo '\\n\\nCommitted most recent integration test output in the \"diff\" directory. Review the changes with \"cd diff && git diff HEAD\" or your preferred git diff viewer.'",
@@ -43,9 +46,11 @@
     "@types/node": "^16.3.3",
     "erc725.js": "^0.5.7",
     "ethers": "5.4.1",
-    "graphql": "^15.5.1"
+    "graphql": "^15.5.1",
+    "universalprofile-smart-contracts": "file:../universalprofile-smart-contracts/universalprofile-smart-contracts-1.0.0.tgz"
   },
   "devDependencies": {
+    "wait-on": "6.0.0",
     "@ava/typescript": "^1.1.1",
     "@istanbuljs/nyc-config-typescript": "^1.0.1",
     "@typescript-eslint/eslint-plugin": "^4.0.1",
