refactor(LSPFactory): adhere to structure from gist

--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "fix:prettier": "prettier \"src/**/*.ts\" --write",
     "fix:lint": "eslint src --ext .ts --fix",
     "test": "run-s build test:unit",
-    "test:node": "hardhat node",
     "test:unit": "run-p test:unit:*",
     "test:unit:chain": "hardhat node",
     "test:unit:ava": "wait-on http://127.0.0.1:8545/ && nyc --silent ava",
@@ -31,8 +30,8 @@
     "cov:send": "run-s cov:lcov && codecov",
     "cov:check": "nyc report && nyc check-coverage --lines 100 --functions 100 --branches 100",
     "doc": "run-s doc:html && open-cli build/docs/index.html",
-    "doc:html": "typedoc src/ --exclude 'src/types/**/*.ts' --exclude '**/*+(index|.spec|.e2e).ts' --out build/docs",
-    "doc:json": "typedoc src/ --exclude 'src/types/**/*.ts' --exclude '**/*+(index|.spec|.e2e).ts' --json build/docs/typedoc.json",
+    "doc:html": "typedoc src/ --exclude 'src/types/**/*.ts' --exclude '**/*+(index|.spec|.e2e).ts' --highlightTheme github-light --out build/docs",
+    "doc:json": "typedoc src/ --exclude 'src/types/**/*.ts' --exclude '**/*+(index|.spec|.e2e).ts' --highlightTheme github-light --json build/docs/typedoc.json",
     "doc:publish": "gh-pages -m \"[ci skip] Updates\" -d build/docs",
     "version": "standard-version",
     "reset-hard": "git clean -dfx && git reset --hard && npm i",
