--- a/package.json
+++ b/package.json
@@ -16,9 +16,7 @@
     "fix:prettier": "prettier \"src/**/*.ts\" --write",
     "fix:lint": "eslint src --ext .ts --fix",
     "test": "run-s build test:unit",
-    "test:unit": "run-p test:unit:*",
-    "test:unit:chain": "hardhat node",
-    "test:unit:ava": "wait-on http://127.0.0.1:8545/ && nyc --silent ava",
+    "test:unit": "hardhat test",
     "check-cli": "run-s test diff-integration-tests check-integration-tests",
     "check-integration-tests": "run-s check-integration-test:*",
     "diff-integration-tests": "mkdir -p diff && rm -rf diff/test && cp -r test diff/test && rm -rf diff/test/test-*/.git && cd diff && git init --quiet && git add -A && git commit --quiet --no-verify --allow-empty -m 'WIP' && echo '\\n\\nCommitted most recent integration test output in the \"diff\" directory. Review the changes with \"cd diff && git diff HEAD\" or your preferred git diff viewer.'",
@@ -44,19 +42,23 @@
   },
   "dependencies": {
     "@ethersproject/abi": "^5.4.0",
-    "@types/node": "^16.3.3",
+    "@nomiclabs/hardhat-ethers": "^2.0.2",
     "erc725.js": "^0.5.7",
     "ethers": "5.4.1",
     "graphql": "^15.5.1",
     "universalprofile-smart-contracts": "file:../universalprofile-smart-contracts/universalprofile-smart-contracts-1.0.0.tgz"
   },
   "devDependencies": {
-    "wait-on": "6.0.0",
     "@ava/typescript": "^1.1.1",
     "@istanbuljs/nyc-config-typescript": "^1.0.1",
+    "@typechain/ethers-v5": "7.0.1",
+    "@types/chai": "^4.2.21",
+    "@types/mocha": "^8.2.3",
+    "@types/node": "^16.4.0",
     "@typescript-eslint/eslint-plugin": "^4.0.1",
     "@typescript-eslint/parser": "^4.0.1",
     "ava": "^3.12.1",
+    "chai": "^4.3.4",
     "codecov": "^3.5.0",
     "cspell": "^4.1.0",
     "cz-conventional-changelog": "^3.3.0",
@@ -72,10 +74,10 @@
     "prettier": "^2.1.1",
     "standard-version": "^9.0.0",
     "ts-node": "^10.1.0",
-    "typedoc": "^0.21.4",
     "typechain": "5.1.2",
-    "@typechain/ethers-v5": "7.0.1",
+    "typedoc": "^0.21.4",
     "typescript": "^4.3.5",
+    "wait-on": "6.0.0",
     "web3": "^1.4.0"
   },
   "files": [
