--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -27,6 +27,9 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
       - run: npm ci
+      - run: git submodule update --init --recursive
+      - run: cd submodules/universalprofile-smart-contracts && npm ci && cd submodules/ERC725/implementations && npm ci
+      - run: cd submodules/universalprofile-smart-contracts && npx truffle build
       - run: npm run build --if-present
       - run: npm test
       - name: Upload coverage to Codecov
