--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "keywords": [],
   "scripts": {
     "build": "run-p build:*",
+    "build:generate-types": "npm run generate-types",
     "build:main": "tsc -p tsconfig.json",
     "build:module": "tsc -p tsconfig.module.json",
     "fix": "run-s fix:*",
