--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -31,6 +31,6 @@ jobs:
       - run: cd ./submodules/universalprofile-smart-contracts && npm ci && cd ./submodules/ERC725/implementations && npm ci
       - run: cd ./submodules/universalprofile-smart-contracts && npx truffle build
       - run: npm run build --if-present
-      - run: npm test
+      - run: npm run cov
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v1
