--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "build/main/index.js",
   "typings": "build/main/index.d.ts",
   "module": "build/module/index.js",
-  "repository": "https://github.com/rryter/lsp-factory.js",
+  "repository": "https://github.com/lukso-network/tools-lspFactory",
   "license": "MIT",
   "keywords": [],
   "scripts": {
