chore(build): provide path to coverage to avoid git-modules confusion

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -34,3 +34,5 @@ jobs:
       - run: npm run cov
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v2
+        with:
+          directory: './coverage/'
