--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,10 +26,8 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: ${{ matrix.node-version }}
+          cache: 'npm'
       - run: npm ci
-      - run: git submodule update --init --recursive
-      - run: cd ./submodules/universalprofile-smart-contracts && npm ci && cd ./submodules/ERC725/implementations && npm ci
-      - run: cd ./submodules/universalprofile-smart-contracts && npx truffle build
       - run: npm run build --if-present
       - run: npm run cov
       - name: Upload coverage to Codecov
