--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
     "incremental": true,
     "target": "es2017",
     "outDir": "build/main",
-    "rootDir": "src",
+    "rootDir": ".",
     "moduleResolution": "node",
     "module": "commonjs",
     "declaration": true,
@@ -39,7 +39,7 @@
 
     "lib": ["es2017", "dom"],
     "types": ["node"],
-    "typeRoots": ["node_modules/@types", "src/types"]
+    "typeRoots": ["node_modules/@types", "types"]
   },
   "include": ["src/**/*.ts"],
   "exclude": ["node_modules/**"],
