--- a/.github/workflows/lint-build-test.yml
+++ b/.github/workflows/lint-build-test.yml
@@ -26,10 +26,17 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: ${{ matrix.node-version }}
-          cache: 'npm'
+      - name: Cache dependencies
+        uses: actions/cache@v2
+        with:
+          path: ~/.npm
+          key: npm-${{ hashFiles('package-lock.json') }}
+          restore-keys: npm-
+      - run: npm config set scripts-prepend-node-path auto
       - run: npm ci
+      - run: npm run generate-types
       - run: npm run fix
-      - run: npm run cov
+      - run: npm run test
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v2
         with:
