--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "@lukso/lsp-factory.js",
   "version": "1.0.1",
   "description": "Helper Library to allow simple deployments of LSP3UniversalProfiles and LSP4DigitalCertificates",
-  "main": "build/main/index.js",
-  "typings": "build/main/index.d.ts",
-  "module": "build/module/index.js",
+  "main": "build/main/src/index.js",
+  "typings": "build/main/src/index.d.ts",
+  "module": "build/module/src/index.js",
   "repository": "https://github.com/lukso-network/tools-lspFactory",
   "license": "MIT",
   "keywords": [],
@@ -15,18 +15,13 @@
     "fix": "run-s fix:*",
     "fix:prettier": "prettier \"src/**/*.ts\" --write",
     "fix:lint": "eslint src --ext .ts --fix",
-    "test": "run-s build test:unit",
-    "test:unit": "nyc hardhat test",
+    "test": "run-s test:unit",
+    "test:unit": "NODE_NO_WARNINGS=1 jest --coverage",
     "check-cli": "run-s test diff-integration-tests check-integration-tests",
     "check-integration-tests": "run-s check-integration-test:*",
     "diff-integration-tests": "mkdir -p diff && rm -rf diff/test && cp -r test diff/test && rm -rf diff/test/test-*/.git && cd diff && git init --quiet && git add -A && git commit --quiet --no-verify --allow-empty -m 'WIP' && echo '\\n\\nCommitted most recent integration test output in the \"diff\" directory. Review the changes with \"cd diff && git diff HEAD\" or your preferred git diff viewer.'",
     "watch:build": "tsc -p tsconfig.json -w",
-    "watch:test": "nyc --silent ava --watch",
-    "cov": "run-s build test:unit cov:html cov:lcov && open-cli coverage/index.html",
-    "cov:html": "nyc report --reporter=html",
-    "cov:lcov": "nyc report --reporter=lcov",
-    "cov:send": "run-s cov:lcov && codecov",
-    "cov:check": "nyc report && nyc check-coverage --lines 100 --functions 100 --branches 100",
+    "watch:test": "NODE_NO_WARNINGS=1 jest --watch",
     "doc": "run-s doc:html && open-cli build/docs/index.html",
     "doc:html": "typedoc --out build/docs",
     "doc:json": "typedoc --json build/docs/typedoc.json",
@@ -34,52 +29,51 @@
     "version": "standard-version",
     "reset-hard": "git clean -dfx && git reset --hard && npm i",
     "prepare-release": "run-s reset-hard test cov:check doc:html version doc:publish",
-    "generate-types": "typechain --target ethers-v5 --out-dir 'types/ethers-v5' './node_modules/@lukso/universalprofile-smart-contracts/build/contracts/*.json'",
-    "postinstall": "npm run generate-types"
+    "generate-types": "typechain --target ethers-v5 --out-dir 'types/ethers-v5' './node_modules/@lukso/universalprofile-smart-contracts/build/contracts/*.json'"
   },
   "engines": {
     "node": ">=10"
   },
   "dependencies": {
+    "@erc725/erc725.js": "^0.6.2-beta.4",
     "@ethersproject/abi": "^5.4.0",
-    "@nomiclabs/hardhat-ethers": "^2.0.2",
-    "erc725.js": "^0.5.7",
-    "ethers": "5.4.1",
-    "graphql": "^15.5.1",
-    "typedoc-neo-theme": "^1.1.1"
+    "browser-image-compression": "^1.0.15",
+    "ethers": "5.4.5",
+    "ipfs-http-client": "52.0.2",
+    "ipfs-utils": "^8.1.6"
   },
   "devDependencies": {
-    "@ava/typescript": "^1.1.1",
-    "@istanbuljs/nyc-config-typescript": "^1.0.1",
+    "@ethereum-waffle/jest": "^3.3.0",
+    "@lukso/universalprofile-smart-contracts": "0.1.1",
+    "@nomiclabs/hardhat-ethers": "^2.0.2",
     "@typechain/ethers-v5": "7.0.1",
-    "@types/chai": "^4.2.21",
-    "@types/mocha": "^8.2.3",
+    "@types/jest": "^27.0.1",
     "@types/node": "^16.4.0",
     "@typescript-eslint/eslint-plugin": "^4.0.1",
     "@typescript-eslint/parser": "^4.0.1",
-    "ava": "^3.12.1",
-    "chai": "^4.3.4",
     "codecov": "^3.5.0",
     "cspell": "^4.1.0",
     "cz-conventional-changelog": "^3.3.0",
+    "esbuild": "^0.12.24",
+    "esbuild-jest": "^0.5.0",
     "eslint": "^7.31.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-eslint-comments": "^3.2.0",
     "eslint-plugin-import": "^2.23.4",
-    "gh-pages": "^3.1.0",
-    "hardhat": "^2.4.3",
+    "gh-pages": "^3.2.3",
+    "hardhat": "^2.6.1",
+    "jest": "^27.1.0",
     "npm-run-all": "^4.1.5",
-    "nyc": "^15.1.0",
-    "open-cli": "^6.0.1",
-    "prettier": "^2.1.1",
-    "standard-version": "^9.0.0",
-    "ts-node": "^10.1.0",
+    "open-cli": "^7.0.0",
+    "prettier": "^2.3.2",
+    "standard-version": "^9.3.1",
+    "ts-node": "^10.2.1",
     "typechain": "5.1.2",
-    "typedoc": "^0.21.4",
+    "typedoc": "^0.21.6",
+    "typedoc-neo-theme": "^1.1.1",
     "typescript": "^4.3.5",
     "wait-on": "6.0.0",
-    "web3": "^1.4.0",
-    "@lukso/universalprofile-smart-contracts": "0.1.1"
+    "web3": "^1.5.2"
   },
   "files": [
     "build/main",
@@ -109,11 +103,5 @@
   },
   "prettier": {
     "singleQuote": true
-  },
-  "nyc": {
-    "extends": "@istanbuljs/nyc-config-typescript",
-    "exclude": [
-      "**/*.spec.js"
-    ]
   }
 }
