--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "browser-image-compression": "^1.0.15",
     "ethers": "5.4.6",
     "ipfs-http-client": "52.0.2",
-    "ipfs-utils": "^8.1.6"
+    "ipfs-utils": "^8.1.6",
+    "rxjs": "^7.3.0"
   },
   "devDependencies": {
     "@ethereum-waffle/jest": "^3.3.0",
