--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
   },
   "devDependencies": {
     "@ethereum-waffle/jest": "^3.3.0",
-    "@lukso/universalprofile-smart-contracts": "^0.1.3",
+    "@lukso/universalprofile-smart-contracts": "0.1.3",
     "@nomiclabs/hardhat-ethers": "^2.0.2",
     "@typechain/ethers-v5": "7.0.1",
     "@types/jest": "^27.0.1",
