chore(eslint): do not lint tmp folder
the tmp folder solely exists because of missing artifacts in the smart-contracts package, as soon as they are delivered, the tmp folder will be deleted

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,7 +2,7 @@
   "root": true,
   "parser": "@typescript-eslint/parser",
   "env": { "es6": true },
-  "ignorePatterns": ["node_modules", "build", "coverage", "test", "jest.config.js"],
+  "ignorePatterns": ["node_modules", "build", "coverage", "test", "jest.config.js", "tmp"],
   "plugins": ["import", "eslint-comments"],
   "extends": [
     "eslint:recommended",
