--- a/package.json
+++ b/package.json
@@ -39,13 +39,13 @@
   },
   "dependencies": {
     "@erc725/erc725.js": "^0.6.2-beta.4",
-    "@ethersproject/abi": "^5.4.1",
-    "@ethersproject/experimental": "5.4.0",
+    "@ethersproject/abi": "5.5.0",
+    "@ethersproject/experimental": "5.5.0",
     "@lukso/universalprofile-smart-contracts": "0.1.3",
     "@typechain/web3-v1": "^3.1.0",
     "axios": "^0.23.0",
     "browser-image-compression": "^1.0.15",
-    "ethers": "5.4.6",
+    "ethers": "5.5.0",
     "ipfs-http-client": "52.0.3",
     "ipfs-utils": "8.1.6",
     "rxjs": "^7.3.0"
