chore: simplify ci + scripts, add prettier in lint

--- a/.github/workflows/lint-build-test.yml
+++ b/.github/workflows/lint-build-test.yml
@@ -1,6 +1,3 @@
-# This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
-# For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
-
 name: Lint, Test, Build
 
 on:
@@ -19,22 +16,34 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v2
         with:
           node-version: ${{ matrix.node-version }}
+
       - name: Cache dependencies
         uses: actions/cache@v2
         with:
           path: ~/.npm
           key: npm-${{ hashFiles('package-lock.json') }}
           restore-keys: npm-
-      - run: npm config set scripts-prepend-node-path auto
-      - run: npm ci
-      - run: npm run build
-      - run: npm run generate-types
-      - run: npm run fix
-      - run: npm run test
+
+      - name: Configure
+        run: npm config set scripts-prepend-node-path auto
+
+      - name: Install
+        run: npm ci
+
+      - name: Lint
+        run: npm run lint
+
+      - name: Test
+        run: npm run generate-types && npm run test # Types needed for tests
+
+      - name: Build
+        run: npm run build
+
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v2
         with:
