--- a/package.json
+++ b/package.json
@@ -1,24 +1,21 @@
 {
   "name": "@lukso/lsp-factory.js",
   "version": "1.1.2",
-  "description": "Helper Library to allow simple deployments of LSP3UniversalProfiles and LSP4DigitalCertificates",
+  "description": "Helper Library to allow simple deployments of LSP3UniversalProfiles and LSP7 and LSP8 Digital Assets.",
   "main": "build/main/src/index.js",
   "typings": "build/main/src/index.d.ts",
   "module": "build/module/src/index.js",
-  "repository": "https://github.com/lukso-network/tools-lspFactory",
+  "repository": "https://github.com/lukso-network/tools-lsp-factory",
   "license": "MIT",
   "keywords": [],
   "scripts": {
     "build": "npm run generate-types && run-p build:*",
     "build:main": "tsc -p tsconfig.json",
     "build:module": "tsc -p tsconfig.module.json",
-    "fix": "run-s fix:*",
-    "fix:prettier": "prettier \"src/**/*.ts\" --write",
-    "fix:lint": "eslint src --ext .ts --fix",
+    "lint": "eslint src --ext .ts",
     "test": "run-s test:unit",
     "test:unit": "HARDHAT_VERBOSE=true DEBUG=true NODE_NO_WARNINGS=1 jest --coverage",
-    "check-cli": "run-s test diff-integration-tests check-integration-tests",
-    "check-integration-tests": "run-s check-integration-test:*",
+    "check-cli": "run-s test diff-integration-tests",
     "diff-integration-tests": "mkdir -p diff && rm -rf diff/test && cp -r test diff/test && rm -rf diff/test/test-*/.git && cd diff && git init --quiet && git add -A && git commit --quiet --no-verify --allow-empty -m 'WIP' && echo '\\n\\nCommitted most recent integration test output in the \"diff\" directory. Review the changes with \"cd diff && git diff HEAD\" or your preferred git diff viewer.'",
     "watch:build": "tsc -p tsconfig.json -w",
     "watch:test": "HARDHAT_VERBOSE=true DEBUG=true NODE_NO_WARNINGS=1 jest --watch",
@@ -67,6 +64,7 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-eslint-comments": "^3.2.0",
     "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-prettier": "^4.0.0",
     "gh-pages": "^3.2.3",
     "hardhat": "^2.6.2",
     "jest": "^27.1.0",
@@ -89,6 +87,7 @@
     "!**/*.spec.*",
     "CHANGELOG.md",
     "LICENSE",
+    "CONTRIBUTING.md",
     "README.md"
   ],
   "ava": {
