--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,7 +1,9 @@
 name: Publish Package
+
 on:
   release:
     types: [created]
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -26,8 +28,14 @@ jobs:
           registry-url: ${{ matrix.registry-url }}
           scope: '@lukso'
           cache: 'npm'
-      - run: npm ci
-      - run: npm run build
-      - run: ${{ matrix.command }}
+
+      - name: Install
+        run: npm ci
+
+      - name: Build
+        run: npm run build
+
+      - name: Publish
+        run: ${{ matrix.command }}
         env:
           NODE_AUTH_TOKEN: ${{ secrets[matrix.token] }}
