--- a/package.json
+++ b/package.json
@@ -1,24 +1,21 @@
 {
   "name": "@lukso/lsp-factory.js",
   "version": "1.1.2",
-  "description": "Helper Library to allow simple deployments of LSP3UniversalProfiles and LSP4DigitalCertificates",
+  "description": "Helper Library to allow simple deployments of LSP3UniversalProfiles and LSP7 and LSP8 Digital Assets.",
   "main": "build/main/src/index.js",
   "typings": "build/main/src/index.d.ts",
   "module": "build/module/src/index.js",
-  "repository": "https://github.com/lukso-network/tools-lspFactory",
+  "repository": "https://github.com/lukso-network/tools-lsp-factory",
   "license": "MIT",
   "keywords": [],
   "scripts": {
     "build": "npm run generate-types && run-p build:*",
     "build:main": "tsc -p tsconfig.json",
     "build:module": "tsc -p tsconfig.module.json",
-    "fix": "run-s fix:*",
-    "fix:prettier": "prettier \"src/**/*.ts\" --write",
-    "fix:lint": "eslint src --ext .ts --fix",
+    "lint": "eslint src --ext .ts",
     "test": "run-s test:unit",
     "test:unit": "HARDHAT_VERBOSE=true DEBUG=true NODE_NO_WARNINGS=1 jest --coverage",
-    "check-cli": "run-s test diff-integration-tests check-integration-tests",
-    "check-integration-tests": "run-s check-integration-test:*",
+    "check-cli": "run-s test diff-integration-tests",
     "diff-integration-tests": "mkdir -p diff && rm -rf diff/test && cp -r test diff/test && rm -rf diff/test/test-*/.git && cd diff && git init --quiet && git add -A && git commit --quiet --no-verify --allow-empty -m 'WIP' && echo '\\n\\nCommitted most recent integration test output in the \"diff\" directory. Review the changes with \"cd diff && git diff HEAD\" or your preferred git diff viewer.'",
     "watch:build": "tsc -p tsconfig.json -w",
     "watch:test": "HARDHAT_VERBOSE=true DEBUG=true NODE_NO_WARNINGS=1 jest --watch",
@@ -42,7 +39,7 @@
     "@ethersproject/abi": "5.5.0",
     "@ethersproject/experimental": "5.5.0",
     "@lukso/universalprofile-smart-contracts": "0.2.2",
-    "@typechain/web3-v1": "^3.1.0",
+    "@typechain/web3-v1": "^4.0.0",
     "axios": "^0.23.0",
     "browser-image-compression": "^1.0.15",
     "ethers": "5.5.0",
@@ -53,7 +50,7 @@
   "devDependencies": {
     "@ethereum-waffle/jest": "^3.3.0",
     "@nomiclabs/hardhat-ethers": "^2.0.2",
-    "@typechain/ethers-v5": "7.0.1",
+    "@typechain/ethers-v5": "8.0.2",
     "@types/jest": "^27.0.1",
     "@types/node": "^16.4.0",
     "@typescript-eslint/eslint-plugin": "^4.30.0",
@@ -67,6 +64,7 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-eslint-comments": "^3.2.0",
     "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-prettier": "^4.0.0",
     "gh-pages": "^3.2.3",
     "hardhat": "^2.6.2",
     "jest": "^27.1.0",
@@ -75,7 +73,7 @@
     "prettier": "^2.3.2",
     "standard-version": "^9.3.1",
     "ts-node": "^10.2.1",
-    "typechain": "5.1.2",
+    "typechain": "6.0.2",
     "typedoc": "^0.22.7",
     "typedoc-neo-theme": "^1.1.1",
     "typedoc-plugin-markdown": "^3.11.3",
@@ -89,6 +87,7 @@
     "!**/*.spec.*",
     "CHANGELOG.md",
     "LICENSE",
+    "CONTRIBUTING.md",
     "README.md"
   ],
   "ava": {
