--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "build:module": "tsc -p tsconfig.module.json",
     "lint": "eslint src --ext .ts",
     "test": "run-s test:unit",
-    "test:unit": "HARDHAT_VERBOSE=true DEBUG=true NODE_NO_WARNINGS=1 jest --coverage",
+    "test:unit": "HARDHAT_VERBOSE=true DEBUG=true NODE_NO_WARNINGS=1 TS_NODE_FILES=true jest --coverage",
     "check-cli": "run-s test diff-integration-tests",
     "diff-integration-tests": "mkdir -p diff && rm -rf diff/test && cp -r test diff/test && rm -rf diff/test/test-*/.git && cd diff && git init --quiet && git add -A && git commit --quiet --no-verify --allow-empty -m 'WIP' && echo '\\n\\nCommitted most recent integration test output in the \"diff\" directory. Review the changes with \"cd diff && git diff HEAD\" or your preferred git diff viewer.'",
     "watch:build": "tsc -p tsconfig.json -w",
@@ -51,7 +51,7 @@
     "@ethereum-waffle/jest": "^3.3.0",
     "@nomiclabs/hardhat-ethers": "^2.0.2",
     "@typechain/ethers-v5": "8.0.2",
-    "@types/jest": "^27.0.1",
+    "@types/jest": "^27.0.2",
     "@types/node": "^16.4.0",
     "@typescript-eslint/eslint-plugin": "^4.30.0",
     "@typescript-eslint/parser": "^4.30.0",
@@ -67,17 +67,18 @@
     "eslint-plugin-prettier": "^4.0.0",
     "gh-pages": "^3.2.3",
     "hardhat": "^2.6.2",
-    "jest": "^27.1.0",
+    "jest": "^27.3.1",
     "npm-run-all": "^4.1.5",
     "open-cli": "^7.0.1",
     "prettier": "^2.3.2",
     "standard-version": "^9.3.1",
+    "ts-jest": "^27.0.7",
     "ts-node": "^10.2.1",
     "typechain": "6.0.2",
     "typedoc": "^0.22.7",
     "typedoc-neo-theme": "^1.1.1",
     "typedoc-plugin-markdown": "^3.11.3",
-    "typescript": "^4.3.5",
+    "typescript": "^4.4.4",
     "wait-on": "6.0.0",
     "web3": "^1.5.2"
   },
