--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "doc": "run-s doc:html && open-cli build/docs/index.html",
     "doc:html": "typedoc --out build/docs",
     "doc:json": "typedoc --json build/docs/typedoc.json",
-    "docs:generate:markdown": "typedoc --options typedoc.json --out testdocs",
+    "docs:generate:markdown": "typedoc --options typedoc.json --out ./docs/techincal-reference --readme none",
     "doc:publish": "gh-pages -m \"[ci skip] Updates\" -d build/docs",
     "version": "standard-version",
     "reset-hard": "git clean -dfx && git reset --hard && npm i",
@@ -78,7 +78,6 @@
     "ts-node": "^10.2.1",
     "typechain": "6.0.2",
     "typedoc": "^0.22.7",
-    "typedoc-neo-theme": "^1.1.1",
     "typedoc-plugin-markdown": "^3.11.3",
     "typescript": "^4.4.4",
     "wait-on": "6.0.0",
