docs: improve typedoc options and re-generate

--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "doc": "run-s doc:html && open-cli build/docs/index.html",
     "doc:html": "typedoc --out build/docs",
     "doc:json": "typedoc --json build/docs/typedoc.json",
-    "docs:generate:markdown": "typedoc --options typedoc.json --out ./docs/techincal-reference --readme none",
+    "docs:generate:markdown": "typedoc --options typedoc.json",
     "doc:publish": "gh-pages -m \"[ci skip] Updates\" -d build/docs",
     "version": "standard-version",
     "reset-hard": "git clean -dfx && git reset --hard && npm i",
