test: add e2e tests

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "build:module": "tsc -p tsconfig.module.json",
     "lint": "eslint src --ext .ts",
     "test": "run-s test:unit",
+    "test:e2e": "run-s build && jest -c jest.config.e2e.js test/e2e/lsp7.spec.ts && jest -c jest.config.e2e.js test/e2e/lsp8.spec.ts && jest -c jest.config.e2e.js test/e2e/lsp3-universal-profile.spec",
     "test:unit": "HARDHAT_VERBOSE=true DEBUG=true NODE_NO_WARNINGS=1 TS_NODE_FILES=true jest --coverage",
     "check-cli": "run-s test diff-integration-tests",
     "diff-integration-tests": "mkdir -p diff && rm -rf diff/test && cp -r test diff/test && rm -rf diff/test/test-*/.git && cd diff && git init --quiet && git add -A && git commit --quiet --no-verify --allow-empty -m 'WIP' && echo '\\n\\nCommitted most recent integration test output in the \"diff\" directory. Review the changes with \"cd diff && git diff HEAD\" or your preferred git diff viewer.'",
@@ -60,6 +61,7 @@
     "codecov": "^3.5.0",
     "cspell": "^4.1.0",
     "cz-conventional-changelog": "^3.3.0",
+    "delay": "^5.0.0",
     "esbuild": "^0.12.24",
     "esbuild-jest": "^0.5.0",
     "eslint": "^7.31.0",
