--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "watch:build": "tsc -p tsconfig.json -w",
     "watch:test": "HARDHAT_VERBOSE=true DEBUG=true NODE_NO_WARNINGS=1 jest --watch",
     "doc": "run-s doc:html && open-cli build/docs/index.html",
-    "doc:html": "typedoc --out build/docs",
+    "doc:html": "typedoc --out build/docs --plugin",
     "doc:json": "typedoc --json build/docs/typedoc.json",
     "docs:generate:markdown": "typedoc --options typedoc.json",
     "doc:publish": "gh-pages -m \"[ci skip] Updates\" -d build/docs",
