--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "node": ">=10"
   },
   "dependencies": {
-    "@erc725/erc725.js": "^0.6.2-beta.4",
+    "@erc725/erc725.js": "^0.9.0",
     "@ethersproject/abi": "5.5.0",
     "@ethersproject/experimental": "5.5.0",
     "@lukso/universalprofile-smart-contracts": "0.4.1",
