ci: fix release ci

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,6 +10,10 @@ jobs:
   release:
     name: 📦 Create GitHub release and publish to NPM
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
+
     steps:
       - name: Ensure main branch
         if: github.ref != 'refs/heads/main'
@@ -24,16 +28,17 @@ jobs:
       - name: Use Node.js 16.x
         uses: actions/setup-node@v2
         with:
-          node-version: 16.x
+          node-version: '16.x'
+          registry-url: 'https://registry.npmjs.org'
+          scope: '@lukso'
+          cache: 'npm'
 
       - name: 🔍 Check if version changed
         uses: EndBug/version-check@v1
         if: github.event_name == 'push'
         id: check
-
       - name: 🔄 Check if should release
         run: echo "SHOULD_RELEASE=${{ steps.check.outputs.changed == 'true' || github.event_name == 'workflow_dispatch' }}" >> $GITHUB_ENV
-
       - name: 📝 Set Version
         if: env.SHOULD_RELEASE == 'true'
         run: |-
@@ -45,6 +50,7 @@ jobs:
         run: npm ci
 
       - name: 🧹 Lint
+        if: env.SHOULD_RELEASE == 'true'
         run: npm run lint
 
       - name: 🛠 Build
