--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "node": ">=10"
   },
   "dependencies": {
-    "@erc725/erc725.js": "^0.9.0",
+    "@erc725/erc725.js": "0.14.1",
     "@ethersproject/abi": "5.5.0",
     "@ethersproject/experimental": "5.5.0",
     "@lukso/lsp-smart-contracts": "0.6.0",
