--- a/package.json
+++ b/package.json
@@ -28,18 +28,16 @@
     "version": "standard-version",
     "reset-hard": "git clean -dfx && git reset --hard && npm i",
     "prepare-release": "run-s reset-hard test cov:check doc:html version doc:publish",
-    "generate-types": "run-p generate-types:ethers-v5 generate-types:web3-v1",
-    "generate-types:ethers-v5": "typechain --target ethers-v5 --out-dir 'types/ethers-v5' './node_modules/@lukso/lsp-smart-contracts/artifacts/*.json'",
-    "generate-types:web3-v1": "typechain --target web3-v1 --out-dir 'types/web3-v1' './node_modules/@lukso/lsp-smart-contracts/artifacts/*.json'"
+    "generate-types": "typechain --target ethers-v5 --out-dir 'types/ethers-v5' './node_modules/@lukso/lsp-smart-contracts/artifacts/*.json'"
   },
   "engines": {
     "node": ">=10"
   },
   "dependencies": {
-    "@erc725/erc725.js": "0.15.0",
+    "@erc725/erc725.js": "0.17.1",
     "@ethersproject/abi": "^5.7.0",
     "@ethersproject/experimental": "^5.7.0",
-    "@lukso/lsp-smart-contracts": "0.7.0",
+    "@lukso/lsp-smart-contracts": "0.8.0",
     "axios": "^0.23.0",
     "browser-image-compression": "^1.0.15",
     "ethers": "^5.7.0",
@@ -79,8 +77,7 @@
     "typedoc": "^0.22.7",
     "typedoc-plugin-markdown": "^3.11.3",
     "typescript": "^4.4.4",
-    "wait-on": "6.0.0",
-    "web3": "^1.5.2"
+    "wait-on": "6.0.0"
   },
   "files": [
     "build/main",
