--- a/package.json
+++ b/package.json
@@ -20,15 +20,12 @@
     "diff-integration-tests": "mkdir -p diff && rm -rf diff/test && cp -r test diff/test && rm -rf diff/test/test-*/.git && cd diff && git init --quiet && git add -A && git commit --quiet --no-verify --allow-empty -m 'WIP' && echo '\\n\\nCommitted most recent integration test output in the \"diff\" directory. Review the changes with \"cd diff && git diff HEAD\" or your preferred git diff viewer.'",
     "watch:build": "tsc -p tsconfig.json -w",
     "watch:test": "HARDHAT_VERBOSE=true DEBUG=true NODE_NO_WARNINGS=1 jest --watch",
-    "doc": "run-s doc:html && open-cli build/docs/index.html",
-    "doc:html": "typedoc --out build/docs --plugin",
-    "doc:json": "typedoc --json build/docs/typedoc.json",
-    "docs:generate:markdown": "typedoc --options typedoc.json",
     "doc:publish": "gh-pages -m \"[ci skip] Updates\" -d build/docs",
     "version": "standard-version",
     "reset-hard": "git clean -dfx && git reset --hard && npm i",
     "prepare-release": "run-s reset-hard test cov:check doc:html version doc:publish",
-    "generate-types": "typechain --target ethers-v5 --out-dir 'types/ethers-v5' './node_modules/@lukso/lsp-smart-contracts/artifacts/*.json'"
+    "generate-types": "typechain --target ethers-v5 --out-dir 'types/ethers-v5' './node_modules/@lukso/lsp-smart-contracts/artifacts/*.json'",
+    "test:upgrade": "npm install && npm run test-build"
   },
   "engines": {
     "node": ">=10"
@@ -43,13 +40,12 @@
     "ethers": "^5.7.0",
     "ipfs-http-client": "52.0.3",
     "ipfs-utils": "8.1.6",
-    "rxjs": "^7.3.0"
+    "rxjs": "^7.8.0"
   },
   "devDependencies": {
-    "@ethereum-waffle/jest": "^3.3.0",
-    "@nomiclabs/hardhat-ethers": "^2.0.2",
+    "@ethereum-waffle/jest": "^3.3.2",
+    "@nomiclabs/hardhat-ethers": "^2.2.2",
     "@typechain/ethers-v5": "8.0.2",
-    "@typechain/web3-v1": "^4.0.0",
     "@types/jest": "^27.0.2",
     "@types/node": "^16.4.0",
     "@typescript-eslint/eslint-plugin": "^4.30.0",
@@ -57,25 +53,23 @@
     "codecov": "^3.5.0",
     "cspell": "^4.1.0",
     "cz-conventional-changelog": "^3.3.0",
-    "esbuild": "^0.12.24",
+    "esbuild": "^0.17.8",
     "esbuild-jest": "^0.5.0",
     "eslint": "^7.31.0",
-    "eslint-config-prettier": "^8.3.0",
+    "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-eslint-comments": "^3.2.0",
-    "eslint-plugin-import": "^2.23.4",
-    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-prettier": "^4.2.1",
     "gh-pages": "^3.2.3",
-    "hardhat": "^2.6.2",
+    "hardhat": "^2.12.7",
     "jest": "^27.3.1",
     "npm-run-all": "^4.1.5",
-    "open-cli": "^7.0.1",
-    "prettier": "^2.3.2",
-    "standard-version": "^9.3.1",
+    "open-cli": "^7.1.0",
+    "prettier": "^2.8.4",
+    "standard-version": "^9.5.0",
     "ts-jest": "^27.0.7",
-    "ts-node": "^10.2.1",
+    "ts-node": "^10.9.1",
     "typechain": "6.0.2",
-    "typedoc": "^0.22.7",
-    "typedoc-plugin-markdown": "^3.11.3",
     "typescript": "^4.4.4",
     "wait-on": "6.0.0"
   },
