fix: Adjust versions of lsp-smart-contracts and erc725.js to match latest.

--- a/package.json
+++ b/package.json
@@ -30,10 +30,10 @@
     "node": ">=10"
   },
   "dependencies": {
-    "@erc725/erc725.js": "0.17.1",
+    "@erc725/erc725.js": "^0.17.2",
     "@ethersproject/abi": "^5.7.0",
     "@ethersproject/experimental": "^5.7.0",
-    "@lukso/lsp-smart-contracts": "^0.8.1",
+    "@lukso/lsp-smart-contracts": "^0.8.2",
     "axios": "^0.23.0",
     "browser-image-compression": "^2.0.0",
     "ethers": "^5.7.0",
