--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "build:main": "tsc -p tsconfig.json",
     "build:module": "tsc -p tsconfig.module.json",
     "lint": "eslint src --ext .ts",
-    "test": "run-s test:unit",
+    "lint:fix": "eslint src --ext .ts --fix",
+    "test": "HARDHAT_VERBOSE=true DEBUG=true NODE_NO_WARNINGS=1 TS_NODE_FILES=true jest --coverage",
     "test-build": "npm run build && npm run test",
-    "test:unit": "HARDHAT_VERBOSE=true DEBUG=true NODE_NO_WARNINGS=1 TS_NODE_FILES=true jest --coverage",
     "check-cli": "run-s test diff-integration-tests",
     "diff-integration-tests": "mkdir -p diff && rm -rf diff/test && cp -r test diff/test && rm -rf diff/test/test-*/.git && cd diff && git init --quiet && git add -A && git commit --quiet --no-verify --allow-empty -m 'WIP' && echo '\\n\\nCommitted most recent integration test output in the \"diff\" directory. Review the changes with \"cd diff && git diff HEAD\" or your preferred git diff viewer.'",
     "watch:build": "tsc -p tsconfig.json -w",
@@ -30,10 +30,10 @@
     "node": ">=10"
   },
   "dependencies": {
-    "@erc725/erc725.js": "^0.17.2",
+    "@erc725/erc725.js": "^0.18.0",
     "@ethersproject/abi": "^5.7.0",
     "@ethersproject/experimental": "^5.7.0",
-    "@lukso/lsp-smart-contracts": "^0.8.2",
+    "@lukso/lsp-smart-contracts": "^0.10.3",
     "axios": "^0.23.0",
     "browser-image-compression": "^2.0.0",
     "ethers": "^5.7.0",
