--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -33,11 +33,11 @@ jobs:
       - name: 💅 Lint
         run: npm run lint
 
-      - name: 🎯 Test
-        run: npm test
-
       - name: 🛠 Build
         run: npm run build
+
+      - name: 🎯 Test
+        run: npm run generate-types && npm run test
 
       - uses: google-github-actions/release-please-action@v3
         id: release
