--- a/package.json
+++ b/package.json
@@ -34,11 +34,17 @@
     "@ethersproject/abi": "^5.7.0",
     "@ethersproject/experimental": "^5.7.0",
     "@lukso/lsp-smart-contracts": "^0.11.1",
+    "@pinata/sdk": "^2.1.0",
     "axios": "^0.23.0",
     "browser-image-compression": "^2.0.0",
-    "ethers": "^5.7.0",
+    "cross-blob": "^3.0.2",
+    "ethers": "^5.7.2",
+    "form-data": "^4.0.0",
+    "form-data-encoder": "^3.0.0",
+    "hardhat-ethers": "^1.0.1",
     "ipfs-http-client": "52.0.3",
     "ipfs-utils": "8.1.6",
+    "isomorphic-fetch": "^3.0.0",
     "rxjs": "^7.8.0"
   },
   "devDependencies": {
@@ -52,6 +58,7 @@
     "codecov": "^3.5.0",
     "cspell": "^6.26.1",
     "cz-conventional-changelog": "^3.3.0",
+    "dotenv": "^16.3.1",
     "esbuild": "^0.17.8",
     "esbuild-jest": "^0.5.0",
     "eslint": "^8.34.0",
