fix: Re-repair jests. It looks like they were not all running all the time.

--- a/.npmignore
+++ b/.npmignore
@@ -8,3 +8,9 @@ coverage
 hardhat.config.ts
 tsconfig.json
 tsconfig.module.json
+jest.config.json
+yarn.lock
+jest.setup.ts
+package-lock.json
+**/*.png
+**/*.spec.*
