--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,10 @@
 {
   "root": true,
   "parser": "@typescript-eslint/parser",
+  "parserOptions": {
+    "project": "./tsconfig.eslint.json",
+    "tsconfigRootDir": "./"
+  },
   "env": { "es6": true },
   "ignorePatterns": ["node_modules", "build", "coverage", "test", "jest.config.js", "tmp"],
   "plugins": ["import", "eslint-comments"],
