--- a/package.json
+++ b/package.json
@@ -34,18 +34,19 @@
     "@ethersproject/abi": "^5.7.0",
     "@ethersproject/experimental": "^5.7.0",
     "@lukso/lsp-smart-contracts": "^0.11.1",
-    "@pinata/sdk": "^2.1.0",
-    "axios": "^0.23.0",
     "browser-image-compression": "^2.0.0",
-    "cross-blob": "^3.0.2",
     "ethers": "^5.7.2",
-    "form-data": "^4.0.0",
-    "form-data-encoder": "^3.0.0",
     "hardhat-ethers": "^1.0.1",
-    "ipfs-http-client": "52.0.3",
-    "ipfs-utils": "8.1.6",
     "isomorphic-fetch": "^3.0.0",
     "rxjs": "^7.8.0"
+  },
+  "peerDependencies": {
+    "@pinata/sdk": "^2.1.0",
+    "cross-blob": "^3.0.2",
+    "form-data": "^4.0.0",
+    "form-data-encoder": "^3.0.0",
+    "ipfs-http-client": "52.0.3",
+    "ipfs-utils": "8.1.6"
   },
   "devDependencies": {
     "@ethereum-waffle/jest": "^3.3.2",
@@ -81,12 +82,15 @@
   "files": [
     "build/main",
     "build/module",
+    "!build/**/*.spec.*",
     "!**/*.spec.*",
     "CHANGELOG.md",
     "LICENSE",
     "CONTRIBUTING.md",
     "README.md",
     "src/*",
+    "!src/**/*.png",
+    "!src/**/*.spec.*",
     "types/*"
   ],
   "ava": {
