fix: scripts-prepend is old

--- a/.github/workflows/lint-build-test.yml
+++ b/.github/workflows/lint-build-test.yml
@@ -30,6 +30,7 @@ jobs:
           restore-keys: npm-
 
       - name: Configure
+        if: ${{ matrix.node-version == '16.x'}}
         run: npm config set scripts-prepend-node-path auto
 
       - name: Install
